--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RS3 Stats Detector v1.5</title>
+  <title>RS3 Stats Detector v1.0</title>
   <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
   <script src="https://runeapps.org/alt1lib.js"></script>
   <style>
@@ -17,7 +17,7 @@
     <button onclick="startFinder()">Start Stats Finder</button>
     <div id="status">Waiting…</div>
     <div id="debug"></div>
-    <div id="version">Build v1.5 (fixed pixel capture)</div>
+    <div id="version">Build v1.0 (pixel capture fixed)</div>
   </div>
 
   <script>
@@ -33,7 +33,15 @@
       console.log("DEBUG:", msg);
     }
 
-    a1lib.on("ready", () => {
+    // Add a small helper to mimic capture() if needed
+    if (!a1lib.capture) {
+      a1lib.capture = function(x, y, w, h) {
+        return a1lib.getregion(x, y, w, h);
+      };
+    }
+
+    // Initial Alt1 check
+    window.addEventListener("load", () => {
       if (window.alt1) {
         setStatus("Alt1 detected ✅");
         alt1.overLayText("Alt1 ready", a1lib.mixcolor(0, 255, 0), 20, 200, 200, 3000);
@@ -96,8 +104,9 @@
         alt1.overLayText(`#${chunkCounter}`, a1lib.mixcolor(255, 255, 255), 14, x + 10, y + 20, 500);
 
         try {
-          let img = a1lib.capture(x, y, w, h);
-          let pixels = img.toData();
+          let img = a1lib.getregion(x, y, w, h);
+          if (!img) throw "No image returned from getregion()";
+          let pixels = img.data;
 
           setDebug(
             `Screen size: ${screenW}x${screenH}\n` +
